app6FileStorage/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app6-microservice2
spec:
  selector:
    app: app6-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8051
  type: ClusterIP
