app6FileStorage/microservice2/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app6-microservice2
spec:
  selector:
    matchLabels:
      app: app6-microservice2
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app6-microservice1"
        ]
